--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <a href="lmontero.html">Luis Ángel Montero</a>
     <a href="iaguirreche.html">Itziar Aguirreche</a>
     <a href="ibmenendez.html">Ibai Menendez</a>
-    <a href="mfraile.html">Maria Rosa Fraile</a>
+    <a href="mfraile.html">Maria Fraile</a>
   </body>
 </html>
